--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres.itnazopyxfukhklmycqq:aosidjoaisjdoas@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="mysql://berlianmotor:@localhost:3306/berlian_motor_db"
 AUTH_SECRET=MCS9KjP8OT/YI2FrU1kaskkCbABMjFaHW813FlrSCuM=
 NEXTAUTH_URL=http://localhost:3000
