feat: update settings

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE_URL="mysql://root:300622@localhost:3306/berlian_motor_db"
+# DATABASE_URL="mysql://root:300622@localhost:3306/berlian_motor_db"
+DATABASE_URL="postgresql://neondb_owner:nZ4whoFy7Asu@ep-frosty-wind-a1ww6u0f-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 AUTH_SECRET=MCS9KjP8OT/YI2FrU1kaskkCbABMjFaHW813FlrSCuM=
 NEXTAUTH_URL=http://localhost:3000
