--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-# DATABASE_URL="mysql://root:300622@localhost:3306/berlian_motor_db"
-DATABASE_URL="postgresql://neondb_owner:nZ4whoFy7Asu@ep-frosty-wind-a1ww6u0f-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="mysql://root:300622@localhost:3306/berlian_motor_db"
+# DATABASE_URL="postgresql://neondb_owner:nZ4whoFy7Asu@ep-frosty-wind-a1ww6u0f-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 AUTH_SECRET=MCS9KjP8OT/YI2FrU1kaskkCbABMjFaHW813FlrSCuM=
 NEXTAUTH_URL=http://localhost:3000
+AUTH_TRUST_HOST=true
